fix the drop overspill

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     background-color: #48515a;
     background-size: 100% 100%;
-    height: 700px;
+    height: 1000px;
 }
 
 .content {
